# dipper

./: .envrc  .gitignore  .gitmodules  .nvimrc.lua  Cargo.toml
src/: actions.rs  cli.rs  db.rs  feed.rs  main.rs  podcast.rs  tui.rs
src/tui/: episodes_page.rs  player_page.rs  pods_page.rs
