[package]
name = "dipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive"] }
curl = "0.4.44"
rss = { version = "2.0.6", features = ["url"] }
rusqlite = "0.29.0"
slug = "0.1.4"
