[package]
name = "dipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.27.0"
curl = "0.4.44"
libmpv = { version = "2.0.1", features = ["build_libmpv"] }
opml = "1.1.5"
ratatui = "0.23.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
rss = { version = "2.0.6", features = ["url"] }
rusqlite = "0.29.0"
slug = "0.1.4"
